# Sylvan

./: .gitignore  BLUEPRINT.md  CLAUDE.md  Dockerfile  ETAT_DES_LIEUX.md  LICENSE  README.md  ablation_latent_loss.sh  baseline_multidrive_slot.sh  baseline_survie_vie.sh  build_slot_channel.py  collect_forage_retina.sh  collect_mode1_bc.sh  collect_wm_eatrich.sh  compare_turn_maneuvers.sh  diag_approach.sh  diag_arbitration.sh  diag_audit_buf.py  diag_bridge_trigger.py  diag_critic_feasibility.py  diag_dream_disp.py  diag_drive_head_feasibility.py  diag_drive_head_latent.py  diag_forage.sh  diag_fpure1_slot_emergence.py  diag_fpure1b_attn.py  diag_fpure2_multislot.py  diag_latent_bearing_probe.py  diag_latent_foodaware.py  diag_mode1_death_cause.py  diag_nav_ab.sh  diag_nav_ab_latent.sh  diag_nav_ab_memory.sh  diag_nav_ab_purslot.sh  diag_nav_ab_slot.sh  diag_nav_ab_wmslot.sh  diag_plan_rear_cmp.py  diag_retina.sh  diag_retina_fov_probe.py  diag_search_sanity.py  (+51 more)
python/: pyproject.toml
python/scripts/: bc_pretrain.py  build_hazard_slot.py  collect_wm_data.py  diagnose_actuation.py  diagnose_gait.py  diagnose_hold.py  diagnose_run.py  eval_planner_ab.py  eval_survival_horizon.py  eval_transfer.py  eval_wm_command.py  eval_world_model_v1.py  probe_latent.py  run_sylvan.py  sanity_command_planner.py  serve_mode1.py  serve_mode1_bridge.py  serve_mode1_collect.py  serve_planner_command.py  serve_planner_visual.py  serve_ppo_collect.py  serve_ppo_visual.py  serve_sac_collect.py  train_mode1_ppo.py  train_ppo.py  train_retina_head.py  train_sac.py  train_slot_channel.py  (+6 more)
(+280 files in other folders)
